# s3encrypt

./: .coveragerc  .gitignore  Makefile  Pipfile  README.md  e2e.py  line_prof.py  mypy.ini  pyproject.toml  requirements.txt  runner.py  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: python-app.yml
s3encrypt/: __init__.py  __main__.py  async_helper.py  aws_encryption_provider.py  decorator.py  file_watch.py  s3_helper.py  s3encrypt.py  temp_file.py
s3encrypt/encryption/: aws_encryption.py  base_encryption.py
s3encrypt/tests/: test_aws_encryption_provider.py  test_s3encrypt.py
tests/: _test_aws_encryption.py  _test_base_encryption.py  _test_s3encrypt_orig.py  test_aws_encryption.py  test_aws_encryption_provider.py  test_base_encryption.py  test_file_watch.py  test_main.py  test_s3encrypt.py
