[build-system]
requires = [ "setuptools >= 35.0.2", "wheel >= 0.29.0"]
build-backend = "setuptools.build_meta"

[tool.tox]
legacy_tox_ini = """
[tox]
# envlist = py37,py38
# py37 not working with asyncio
envlist = py38

[testenv]
deps = pytest >= 5.0.0
    pipenv
commands=
    pipenv install --dev
    pytest
"""